--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  ionicons: ^0.1.2
+  ionicons: ^0.2.2
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.9
+  google_fonts: ^6.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/svg/
+    - assets/icons/
